--- a/css/style.css
+++ b/css/style.css
@@ -655,7 +655,6 @@ h4 {
     margin-bottom: 0px;
     text-align: center;
   }
-
   
   .nav-link-custom {
     padding: 15px 20px;
@@ -1793,6 +1792,10 @@ h4 {
     font-size: 2rem;
   } */
 
+  .content-section {
+    overflow: hidden !important;
+  }
+
   .hero-section {
     padding: 90px 0 40px;
   }
@@ -1801,6 +1804,7 @@ h4 {
     padding: 60px 0;
   }
 }
+
 
 /* ABOUT PAGE */
 
